<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/bottom_layout"
  android:layout_width="match_parent"
  android:layout_height="@dimen/nav_bar_height"
  android:layout_alignParentBottom="true"
  android:background="@android:color/white"
  android:elevation="12dp"
  android:gravity="center_vertical"
  android:orientation="horizontal">

  <RelativeLayout
    android:id="@+id/main_bottom_nv_game"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:clickable="true"
    android:descendantFocusability="afterDescendants"
    android:gravity="center">

    <ImageView
      android:layout_centerHorizontal="true"
      android:id="@+id/main_bottom_nv_game_iv"
      android:layout_width="29dp"
      android:layout_height="26dp"
      android:src="@drawable/main_tab_icon_home_selector"/>
    <TextView
      android:layout_centerHorizontal="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/main_bottom_nv_game_iv"
      android:textSize="11sp"
      android:textColor="@color/color_605961"
      android:text="@string/home"/>

  </RelativeLayout>

  <RelativeLayout
    android:id="@+id/main_bottom_nv_vip"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:clickable="true"
    android:descendantFocusability="afterDescendants"
    android:gravity="center">

    <ImageView
      android:layout_centerHorizontal="true"
      android:id="@+id/main_bottom_nv_vip_iv"
      android:layout_width="29dp"
      android:layout_height="26dp"
      android:src="@drawable/main_tab_icon_news_selector"/>
    <TextView
      android:layout_centerHorizontal="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/main_bottom_nv_vip_iv"
      android:textSize="11sp"
      android:textColor="@color/color_605961"
      android:text="@string/news"/>
  </RelativeLayout>

  <RelativeLayout
    android:id="@+id/main_bottom_nv_store"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:clickable="true"
    android:descendantFocusability="afterDescendants"
    android:gravity="center">

    <ImageView
      android:layout_centerHorizontal="true"
      android:id="@+id/main_bottom_nv_store_iv"
      android:layout_width="29dp"
      android:layout_height="26dp"
      android:src="@drawable/main_tab_icon_video_selector"/>
    <TextView
      android:layout_centerHorizontal="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/main_bottom_nv_store_iv"
      android:textSize="11sp"
      android:textColor="@color/color_605961"
      android:text="@string/video"/>
  </RelativeLayout>

  <RelativeLayout
    android:id="@+id/main_bottom_nv_me"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:clickable="true"
    android:descendantFocusability="afterDescendants"
    android:gravity="center">

    <ImageView
      android:layout_centerHorizontal="true"
      android:id="@+id/main_bottom_nv_me_iv"
      android:layout_width="29dp"
      android:layout_height="26dp"
      android:src="@drawable/main_tab_icon_me_selector"/>
    <TextView
      android:layout_centerHorizontal="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/main_bottom_nv_me_iv"
      android:textSize="11sp"
      android:textColor="@color/color_605961"
      android:text="@string/me"/>
  </RelativeLayout>


</android.support.v7.widget.LinearLayoutCompat>

