<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_ffffff"
        android:textSize="36sp"
        android:text="@string/welcome_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        />

    <LinearLayout
        android:layout_width="335dp"
        android:layout_height="264dp"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_login_bg"
        android:orientation="vertical"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="left|center"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="10dp">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/login_icon_user" />
            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:inputType="text"
                android:maxLines="1"
                android:background="@null"
                android:gravity="center|left"
                android:cursorVisible="true"
                android:hint="@string/login_edit_username"
                android:textColor="#ff333333"
                android:textColorHint="@color/color_999999"
                android:textCursorDrawable="@drawable/edit_cursor"
                android:textSize="14sp" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:background="#ffdcdcdc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="left|center"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="10dp">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/login_icon_pwd" />
            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center|left"
                android:cursorVisible="true"
                android:hint="@string/login_edit_password"
                android:textColor="#ff333333"
                android:textColorHint="@color/color_999999"
                android:textCursorDrawable="@drawable/edit_cursor"
                android:textSize="14sp" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:background="#ffdcdcdc" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="39dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@drawable/selector_btn_tv"
            android:background="@drawable/selector_btn_bg"/>
    </LinearLayout>


</RelativeLayout>