<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/tool_bar"
            layout="@layout/layout_custom_tool_bar"/>
        <RelativeLayout
            android:id="@+id/content"
            android:layout_below="@id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ff0000"
            >
            <com.amap.api.maps2d.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.amap.api.maps2d.MapView>
            <LinearLayout
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_width="355dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_map_icon_bg"
                android:gravity="center_vertical"
                android:elevation="3dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginLeft="17dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_8e8e93"
                    android:textSize="14sp"
                    android:text="@string/device_status"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:background="@drawable/shape_green_dot"/>
                <TextView
                    android:layout_marginLeft="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_8e8e93"
                    android:textSize="12sp"
                    android:text="@string/device_online"/>
                <TextView
                    android:layout_marginLeft="32dp"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:background="@drawable/shape_red_dot"/>
                <TextView
                    android:layout_marginLeft="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_8e8e93"
                    android:textSize="12sp"
                    android:text="@string/device_offline"/>
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/rl_dev_info"
                android:layout_width="match_parent"
                android:layout_height="242dp"
                android:layout_alignParentBottom="true"
                android:background="@color/color_ffffff"
                android:elevation="3dp"
                android:visibility="gone">
                <RelativeLayout
                    android:id="@+id/ll_dev_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <TextView
                        android:id="@+id/tv_dev_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        />
                    <ImageView
                        android:id="@+id/btn_close"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="8dp"
                        android:src="@mipmap/ic_close"
                        android:layout_marginRight="15dp"/>
                </RelativeLayout>
                <TextView
                    android:id="@+id/devider"
                    android:layout_below="@id/ll_dev_name"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_eeeeee"
                    />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/menu_container"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:background="@color/color_ffffff"
        android:layout_gravity="start"
        android:orientation="vertical"
        >
        <cn.wostore.baseapp.widget.NiceImageView
            android:id="@+id/avator"
            android:layout_width="62dp"
            android:layout_height="62dp"
            app:is_circle="true"
            android:src="@mipmap/avator"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="88dp"
            />
        <TextView
            android:id="@+id/username"
            android:layout_below="@id/avator"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Jane"
            android:textSize="11sp"
            android:textColor="@color/color_000000"/>
        <TextView
            android:id="@+id/phone_info"
            android:layout_below="@id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="11sp"
            android:text="iPhone X"
            android:textColor="@color/color_6f6f6f"/>
        <LinearLayout
            android:id="@+id/ll_video"
            android:layout_below="@id/phone_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="73dp"
            android:paddingLeft="40dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/icon_video"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/video"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/color_333333"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_setting"
            android:layout_below="@id/ll_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:paddingLeft="40dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/icon_setting"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/settings"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/color_333333"
                />
        </LinearLayout>
    </RelativeLayout>
    
</android.support.v4.widget.DrawerLayout>
